@@ -1,3 +1,9 @@
+2012-12-15  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: get_priorities(): Do not assert priorities
+	  since they may be legitimate values. We could check errno,
+	  but little point when only querying.
+
 2012-12-10  James Hunt  <james.hunt@ubuntu.com>
 
 	* TODO: Updated with an idea from Dmitrijs Ledkovs.
